--- a/lewawards/templates/navbar.html
+++ b/lewawards/templates/navbar.html
@@ -12,12 +12,21 @@
       <a class="navbar-brand" href="{% url 'home' %}" style="font-family: billabong;font-size:40px;color:black;">Les Awards</a>
     </div>
     <div class="navbar-right text-center" style="margin:0 auto;">
-    
+    <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search user" name="user">
+        <div class="input-group-btn">
+          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        </div>
+      </div>
+
+    </form>
   </div>
     <div class="d-block">
         {% if user.is_authenticated %}
         <div >
-          
+            <a href="{%url 'profile' user.id %}" class="d-block"><i class="glyphicon glyphicon-user" style="color:black;"></i></a>
           
 
         <ul>
@@ -30,7 +39,10 @@
                 <a href="{%url 'home'%}">Home</a>
               </li>
 
-             
+                <li>
+                    <a href="{%url 'edit_profile' user.id %}">Edit Profile</a>
+                  </li>
+            
               <li>
                 <a href="/accounts/password/change">Change Password</a>
               </li>
