--- a/lewawards/templates/edit_profile.html
+++ b/lewawards/templates/edit_profile.html
@@ -1,15 +1,23 @@
+{% load bootstrap3 %} {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
 
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>New Post</title>
+  {{form.media}}
+
+{% block styles %} {% bootstrap_css %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}"> {% endblock %}
+
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom:2px solid black;">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom:2px solid black;">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'home' %}" style="font-family: billabong;font-size:40px;color:black;">Les Awards</a>
+      <a class="navbar-brand" href="{% url 'home' %}" style="font-family: billabong;font-size:40px;color:black;">MyGram</a>
     </div>
     <div class="navbar-right text-center" style="margin:0 auto;">
     
@@ -56,5 +64,18 @@
   </div>
   
 </nav>
+<div class="container">
+  <form  action="{%url 'edit_profile' user.id %}" method="post" enctype="multipart/form-data">
+    {%csrf_token%}
+
+    {% bootstrap_form form%}
+    <input type="submit" class="btn btn-success btn-lg" value="Post">
+  </form>
+</div>
+   {% block scripts %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  {% bootstrap_javascript %} {% endblock %}
+
 </body>
+
 </html>
