add url and view function to grade a project

--- a/lewawards/templates/projects/home.html
+++ b/lewawards/templates/projects/home.html
@@ -9,6 +9,7 @@
    <p>{{proj.name}}</p>
   <a href="{{proj.url}}"> <img src="{{proj.screenshot.url}}" alt="" height="200"></a>
    <p>{{proj.description}}</p>
+   <a href="/grade/{{proj.id}}"> <button>Grade</button> </a>
   </div>
  {%endfor%}
 
