--- a/lewawards/templates/projects/home.html
+++ b/lewawards/templates/projects/home.html
@@ -7,7 +7,7 @@
  {%for proj in projects %}
  <div class="container">
    <p>{{proj.name}}</p>
-  <a href="{{proj.url}}"> <img src="{{proj.screenshot.url}}" alt="" height="200"></a>
+  <a href="/project/{{proj.id}}"> <img src="{{proj.screenshot.url}}" alt="" height="200"></a>
    <p>{{proj.description}}</p>
    <a href="/grade/{{proj.id}}"> <button>Grade</button> </a>
   </div>
