--- a/lewawards/templates/projects/project.html
+++ b/lewawards/templates/projects/project.html
@@ -15,14 +15,17 @@
    <div class="row">
     <p>{{project.description}}</p>
    </div>
-
+   <a href="{{project.url}}" target="_blank"><button>Visit site</button></a>
+  {% for grade in grades %}
    <div class="row">
-     <p>Design: {{project.grade.design}} </p>
-     <p>Usability: {{project.grade.usability}} </p>
-     <p>Content: {{project.grade.content}} </p>
-     <p>Total: {{project.grade.total}} </p>
+     <p>Design: {{grade.design}} </p>
+     <p>Usability: {{grade.usability}} </p>
+     <p>Content: {{grade.content}} </p>
+     <p>Total: {{grade.total}} </p>
    </div>
-
+   {% empty %}
+   <p>fff</p>
+{%endfor%}
  </div>
 
  {% endblock %}
