fix error in grade view function in views.py

--- a/lewawards/templates/projects/profile.html
+++ b/lewawards/templates/projects/profile.html
@@ -12,7 +12,7 @@
    <div class="row">
     <p>First name:{{user.profile.first_name}}</p>
     <p>Last name:{{user.profile.last_name}}</p>
-    <p>Phone number:{{user.profile.phone_number}}</p>
+    <p>Phone number:0{{user.profile.phone_number}}</p>
     <p>Email:{{user.email}}</p>
 <p>{{user.profile.bio}}</p>
 <div class="row">
