--- a/lewawards/templates/navbar.html
+++ b/lewawards/templates/navbar.html
@@ -11,9 +11,21 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="{% url 'home' %}" style="font-family: billabong;font-size:40px;color:black;">Les Awards</a>
     </div>
-    <div class="navbar-right text-center" style="margin:0 auto;">
+    
+      <div class="col-sm-4 col-md-4 navbar-right">
 
-  </div>
+        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+  
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search Project" name="project">
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+          </div>
+  
+        </form>
+      </div>
+ 
     <div class="d-block">
         {% if user.is_authenticated %}
         <div >
