--- a/lewawards/templates/navbar.html
+++ b/lewawards/templates/navbar.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom:2px solid black;">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom:2px solid black;margin-bottom:0;">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="{% url 'home' %}" style="font-family: billabong;font-size:40px;color:black;">Les Awards</a>
