add the overall grades of a project on project.html

--- a/lewawards/templates/projects/project.html
+++ b/lewawards/templates/projects/project.html
@@ -9,11 +9,11 @@
         </div>
         <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#votes">Judges votes</button>
         <div class="container jj">
-            <div class="filterDiv cars">Design 5</div>
-            <div class="filterDiv colors fruits">Usability 8</div>
-            <div class="filterDiv cars">Content 10</div>
-            <div class="filterDiv colors">Total 23</div>
-            <div class="filterDiv cars animals">Average: 7.8 </div>
+            <div class="filterDiv cars">Design {{total_design}}</div>
+            <div class="filterDiv colors fruits">Usability {{total_usability}}</div>
+            <div class="filterDiv cars">Content {{total_content}}</div>
+            <div class="filterDiv colors">Total {{total}}</div>
+            <div class="filterDiv cars animals">Average: {{final}}</div>
            
            
           </div>  
