--- a/lewawards/templates/projects/home.html
+++ b/lewawards/templates/projects/home.html
@@ -10,13 +10,14 @@
 
  {%for proj in projects %}
 
-   <div class="col-md-4">
+   <div class="col-md-4" >
+    <div style="border:2px solid blue; padding:4px;">
    <p>{{proj.name}}</p>
   <a href="/project/{{proj.id}}"> <img src="{{proj.screenshot.url}}" alt="" height="200"></a>
    <p>{{proj.description}}</p>
    <a href="/grade/{{proj.id}}"> <button>Grade</button> </a>
   </div>
-
+</div>
  {%endfor%}
 
 
