add view functions and urls in views.py and urls.py for the creation and access of api

--- a/lewawards/templates/projects/home.html
+++ b/lewawards/templates/projects/home.html
@@ -11,7 +11,7 @@
  {%for proj in projects %}
 
    <div class="col-md-4" >
-    <div style="border:2px solid blue; padding:4px;">
+    <div style="border:2px solid white; padding:4px;">
    <p>{{proj.name}}</p>
   <a href="/project/{{proj.id}}"> <img src="{{proj.screenshot.url}}" alt="" height="200"></a>
    <p>{{proj.description}}</p>
