--- a/lewawards/templates/projects/project.html
+++ b/lewawards/templates/projects/project.html
@@ -51,11 +51,11 @@
 </div>  
 </div>
 
-<div>
+<div >
   <h2 class="text-center">Other projects</h2>
   {%for proj in projects %}
 
-   <div class="col-md-4" style="background-color:grey; padding-left:7%;" >
+   <div class="col-md-4" style=" padding-left:7%;" >
     <div style="">
    <p>{{proj.name}}</p>
   <a href="/project/{{proj.id}}"> <img src="{{proj.screenshot.url}}" alt="" height="200"></a>
