--- a/lewawards/templates/navbar.html
+++ b/lewawards/templates/navbar.html
@@ -9,7 +9,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom:2px solid black;margin-bottom:0;">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'home' %}" style="font-family: billabong;font-size:40px;color:black;">Les Awards</a>
+      <a class="navbar-brand text-center" href="{% url 'home' %}" style="font-family: billabong;font-size:40px;color:black;">Les Awards</a>
     </div>
     
       <div class="col-sm-4 col-md-4 navbar-right">
