--- a/lewawards/templates/projects/home.html
+++ b/lewawards/templates/projects/home.html
@@ -6,18 +6,24 @@
 
 <div id="top">
 <h1 class="text-center">WELCOME</h1>
+<h2 class="text-center">to <span> lesAwards</span></h2>
 </div>
 
  {%for proj in projects %}
 
-   <div class="col-md-4" >
-    <div style="border:2px solid white; padding:4px;">
-   <p>{{proj.name}}</p>
-  <a href="/project/{{proj.id}}"> <img src="{{proj.screenshot.url}}" alt="" height="200"></a>
+   <div class="col-md-3" >
+     <div class="panel hh">
+    <div style="padding:4px;">
+   <p class="panel panel-heading">{{proj.name}}</p>
+   <div class="panel panel-body">
+  <a href="/project/{{proj.id}}" > <img src="{{proj.screenshot.url}}" alt="" height="250" id="img" ></a>
    <p>{{proj.description}}</p>
-   <a href="/grade/{{proj.id}}"> <button>Grade</button> </a>
+  </div>
+   <a href="/grade/{{proj.id}}" class="panel panel-footer"> <button>Grade</button> </a>
+  </div>
   </div>
 </div>
+
  {%endfor%}
 
 
