--- a/lewawards/templates/projects/project.html
+++ b/lewawards/templates/projects/project.html
@@ -2,14 +2,14 @@
 
  {% block content %}
 <div style="background-image:url('{{project.screenshot.url}}');height: 600px;background-size: cover;background-blend-mode:overlay;">
-  <a href="/grade/{{project.id}}" style="float:right;"><button class="btn btn-lg" style="background-color:rgb(125, 169, 197);">Vote</button></a>
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#votes" style="background-color:rgb(125, 169, 197);">Judges votes</button>
+  <a href="/grade/{{project.id}}" style="float:right;" class="top-right"><button class="btn btn-lg" style="background-color:none;color:black;">Vote</button></a>
+  <button type="button" class="btn btn-lg bottom-right" data-toggle="modal" data-target="#votes" style="background-color:none;color:black;">Judges votes</button>
     <div class="container">
-      <h1 class="text-center" style="padding-top: 10%">{{project.name}}</h1>
-        <h3 class="tect-center" style="padding-left:40%;">From {{project.user.username}} with {{project.overall_grade}}</h3>
+      <h1 class="text-center" style="padding-top: 10%;color:red;">{{project.name}}</h1>
+        <h3 class="tect-center" style="padding-left:40%;">By <span style="color:red;">{{project.user.username|upper}}</span> with<span style="color:red;">  {{project.overall_grade}} </span></h3>
         </div>
        
-        <div class="container jj">
+        <div class="container jj centered">
             <div class="filterDiv cars">Design {{total_design}}</div>
             <div class="filterDiv colors fruits">Usability {{total_usability}}</div>
             <div class="filterDiv cars">Content {{total_content}}</div>
@@ -18,7 +18,7 @@
            
            
           </div>  
-         
+         <a href="{{project.url}}" class="bottom-left" style="background-color:none;color:black;" target="_blank" ><button class="btn btn-lg"> Visit Site </button></a>
 
 <!-- Modal -->
 <div id="votes" class="modal fade" role="dialog">
@@ -55,13 +55,14 @@
   <h2 class="text-center">Other projects</h2>
   {%for proj in projects %}
 
-   <div class="col-md-4" style=" padding-left:7%;" >
+   <div class="col-md-3" style=" padding-left:7%;" >
     <div style="">
-   <p>{{proj.name}}</p>
-  <a href="/project/{{proj.id}}"> <img src="{{proj.screenshot.url}}" alt="" height="200"></a>
-   <p>{{proj.description}}</p>
-   <a href="/grade/{{proj.id}}"> <button>Grade</button> </a>
-  </div>
+   <p class='panel panel-heading'>{{proj.name}}</p>
+   <div class="panel panel-body">
+      <a href="/project/{{proj.id}}" > <img src="{{proj.screenshot.url}}" alt="" height="250" id="img" ></a>
+       <p>{{proj.description}}</p>
+      </div>
+       <a href="/grade/{{proj.id}}" class="panel panel-footer"> <button>Grade</button> </a>  </div>
 </div>
  {%endfor%}
 </div>
