--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,65 +1,42 @@
 #top{
-  background-image: url('https://images.pexels.com/photos/889087/pexels-photo-889087.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
+  /* background-image: url('https://images.pexels.com/photos/889087/pexels-photo-889087.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500'); */
+  background-color: #111;
   height:500px;
   width: 100%;
 }
 #top h1{
-  padding-top:15%;
+  padding-top:10%;
+  color: white;
+  font-size: 30px;
+  
+}
+#top h2{
+  
+  color: white;
+  
   
 }
 
-
-/* Tooltip container */
-.tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+#top span{
+ 
+  color: red;
+  
+  
 }
 
-/* Tooltip text */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
-
-  /* Position the tooltip text */
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -60px;
-
-  /* Fade in tooltip */
-  opacity: 0;
-  transition: opacity 0.3s;
+body{
+  font-family: 'Sree Krushnadevaraya', serif;
+  font-size:15px;
+  background-color: rgb(255,255,255);
 }
 
-/* Tooltip arrow */
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
 
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
+
 
 .filterDiv {
   float: left;
-  background-color: #2196F3;
-  color: #ffffff;
+  background-color: grey;
+  color: white;
   width: 100px;
   line-height: 100px;
   text-align: center;
@@ -69,4 +46,79 @@
 }
 .jj{
   padding-left: 21%;
+}
+
+
+/* The side navigation menu */
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  /* padding: 20px; */
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+
+#dp{
+  width:140px;
+  height: 140px;
+  border-radius: 60%;
+  float:left;
+  border:1px solid black;
+}
+.panel-body{
+  background-color: grey;
+}
+
+.panel-heading{
+  background-color: rgb(150, 147, 147);
+  font-size:100%;
+}
+.panel-footer{
+  margin-top:10%;
+}
+
+#img{
+  width:100%;
 }
